fix grid gap

--- a/style.css
+++ b/style.css
@@ -307,7 +307,7 @@ nav {
   margin: auto;
 }
 .dark {
-  background-color: #f6f6f6;
+  background-color: #e5e5e5;
 }
 .featureImg {
   grid-column: 1/ 8;
@@ -316,7 +316,7 @@ nav {
   align-items: center;
 }
 .featureImg-d {
-  grid-column: 5/ 13;
+  grid-column: 6/ 13;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -415,6 +415,7 @@ nav {
   font-size: clamp(14px, 2vw, 18px);
 }
 .lastimg {
+  margin-inline: auto;
   width: 90%;
 }
 .lastimg > img {
@@ -463,7 +464,7 @@ nav {
 footer {
   background-color: #1c1c1c;
   color: #fff;
-  padding-block: 80px;
+  padding-top: 80px;
   padding-inline: 15px;
 }
 .footerNav {
@@ -498,7 +499,7 @@ footer {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  margin-bottom: 2rem;
+  margin-bottom: 80px;
 }
 .footerNav ul > li:nth-child(1) {
   color: #404eed;
